added menu code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,30 @@
 
 </head>
 <body>
-    <div class="wrapper">
+    <div id="mainWrapper" class="wrapper">
+
+        <section id="mobileMenu" class="mobile-wrapper hidden">
+            <div class="mobile-inner-wrapper">
+                <div class="header-mobile">
+                    <div>go.arch</div>
+                    <a id="menu-icon-close"><i class="fas fa-times"></i></a>
+                </div>
+
+                <nav class="menu-mobile-open">
+                    <a>Home</a>
+                    <a>About Us</a>
+                    <a>Projects</a>
+                    <a>Blog</a>
+                    <a>Contact Us</a>
+                </nav>
+
+                <div class="bottom-icons">
+                    <div><a href="#"><i class="fab fa-instagram"></i></a></div>
+                    <div><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+                </div>
+            </div>
+        </section>
+
         <header>
             <div class="header-image-wrapper">
 
@@ -37,7 +60,7 @@
                 </nav>
 
                 <nav class="menu-mobile">
-                    <a><i class="fas fa-bars"></i></a>
+                    <a id="menu-icon"><i class="fas fa-bars"></i></a>
                 </nav>
 
                 <div class="title">
@@ -143,5 +166,10 @@
         </div>
     </div>
     
+    <script src="resources/main.js"></script>
+
+    <noscript>
+        Your browser currently does not support or has JS disabled.
+    </noscript>
 </body>
 </html>
