--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="author" content="Miruna Arcaleanu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Second Responsive layout</title>
+    <title>Second Responsive layout with Bootstrap</title>
 
     <link href="bundles/font-awesome/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="bundles/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="resources/main.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,7 +18,17 @@
 
 </head>
 <body>
-    <div id="mainWrapper" class="wrapper">
+
+    <div class="container-fluid">
+        <header>
+            <div class="jumbotron jumbotron-fluid jumbotron-image-header">
+
+            </div>
+        </header>
+
+    </div>
+
+    <!-- <div id="mainWrapper" class="wrapper">
 
         <section id="mobileMenu" class="mobile-wrapper hidden">
             <div class="mobile-inner-wrapper">
@@ -164,9 +175,10 @@
 
             </form>
         </div>
-    </div>
+    </div> -->
     
     <script src="resources/main.js"></script>
+    <script src="bundles/bootstrap/js/bootstrap.js"></script>
 
     <noscript>
         Your browser currently does not support or has JS disabled.
