--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                 </div>
 
-                <div class="container-fluid ">
-                    <nav class="navbar navbar-expand-sm navbar-light justify-content-end">
+                <div class="container">
+                    <nav class="navbar navbar-expand-sm navbar-light justify-content-end ">
                         <button class="navbar-toggler justify-content-end" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon "></span>
                         </button>
                       
                         <div class="collapse navbar-collapse justify-content-end " id="navbarTogglerDemo03">
-                          <ul class="navbar-nav align-items-end ">
+                          <ul class="navigation navbar-nav align-items-end">
                             <li class="nav-item ">
                                 <a class="nav-link" href="#">Home</a>
                             </li>
