--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
                           <span class="navbar-toggler-icon "></span>
                         </button>
                       
-                        <div class="collapse navbar-collapse justify-content-end " id="navbarTogglerDemo03">
-                          <ul class="navigation navbar-nav align-items-end">
+                        <div class="collapse navbar-collapse justify-content-end pl-4 " id="navbarTogglerDemo03">
+                            <div class="header-mobile d-flex d-sm-none d-block">
+                                <div class="pb-4">go.arch</div>
+                            </div>
+                          <ul class="navigation navbar-nav align-items-sm-end align-items-start">
                             <li class="nav-item ">
                                 <a class="nav-link" href="#">Home</a>
                             </li>
@@ -52,6 +55,10 @@
                                 <a class="nav-link" href="#">Contact Us</a>
                             </li>
                           </ul>
+                          <div class="bottom-icons d-flex d-sm-none d-block">
+                            <div><a href="#"><i class="fab fa-instagram"></i></a></div>
+                            <div><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+                        </div>
                         </div>
                     </nav>
                 </div>
@@ -188,6 +195,7 @@
     
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="bundles/bootstrap/js/bootstrap.js"></script>
+    <script src="resources/main.js"></script>
 
     <noscript>
         Your browser currently does not support or has JS disabled.
